Add overflow hidden in .head

--- a/styles.css
+++ b/styles.css
@@ -32,15 +32,14 @@ body {
     /*color: #188f71;*/
     position: relative;
     background: transparent;
-    border-radius: 50%;
     width: 100%; /* Make hero full-width */
     margin: 0; /* Remove margins */
-    border-radius: 20%;
     display: flex; /* Use flexbox for vertical centering */
     flex-direction: column; /* Stack content vertically */
     justify-content: center; /* Vertically center content */
     align-items: center; 
     backdrop-filter: blur(100px);
+    overflow: hidden;
 }
 
 /*.hero::before {
