--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     background-size: 100% auto; /* Ensures it stretches horizontally but repeats vertically */
     overflow-x: hidden;
     font-size: 20px;
+    max-width: 100%;
 }
 
 
