--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
 }*/
 
 .hero h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: bold;
     font-family: 'Poppins', sans-serif;
     z-index: 1; /* Keep the heading above any overlays */
@@ -71,13 +71,12 @@ footer {
     margin:60px;
     border-radius:20px;
     border-style: solid;
-    animation: glow 1s infinite alternate;
+    animation: blink 1s infinite alternate;
 }
-@keyframes glow {
-    0% { text-shadow: 0 0 5px #e9635f; }
-    25% { text-shadow: 0 0 20px #f11b0c; }
-    0% { text-shadow: 0 0 5px #e9635f; }
-    25% { text-shadow: 0 0 20px #f11b0c; }
+@keyframes blink {
+    0% { font-size: 1.5rem; opacity: 1; }
+    50% { font-size: 1.6rem; opacity: 0.5; }
+    100% { font-size: 1.5rem; opacity: 1; }
   }
   
 /* Media queries for responsiveness */
