--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Noto Color Emoji","Roboto", sans-serif;
     margin: 0;
     padding: 0;
     color: #073613;
