--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
     background-color: white;
     border-radius: 10% / 50%;
     max-width: 100%; /* Make hero full-width */
-    margin: 0; /* Remove margins */
+    margin-top:10px; 
     display: flex; /* Use flexbox for vertical centering */
     flex-direction: column; /* Stack content vertically */
     justify-content: center; /* Vertically center content */
@@ -111,7 +111,7 @@ footer {
     width: 4px;
     background: linear-gradient(to bottom, #7eac7f, #76e060);
     left: 50%;
-    top: 0;
+    top: 10px;
     bottom: 0;
     transform: translateX(-50%);
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
@@ -127,6 +127,7 @@ footer {
     left: 50%;
     transform: translateX(-50%);
     top: -5px;
+    margin-top: 5px;
   }
   
   .central-line::after {
@@ -139,6 +140,7 @@ footer {
     left: 50%;
     transform: translateX(-50%);
     bottom: -5px;
+    margin-bottom: 5px;
   }
 
 .timeline-container {
@@ -149,6 +151,7 @@ footer {
     width: 45%;
     position: relative;
     margin-bottom: 50px;
+    margin-top: 50px;
     transition: transform 0.3s ease-out;
 }
 
