--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     color: #073613;
     text-align: center;
-    background: repeat-y url("photos/stars1.jpg");
+    background: repeat-y url("photos/tile2.jpg");
     background-size: 100% auto; /* Ensures it stretches horizontally but repeats vertically */
     overflow-x: hidden;
     font-size: 20px;
